--- a/package.json
+++ b/package.json
@@ -1,38 +1,36 @@
 {
   "name": "generator-polymer",
-  "version": "0.1.0",
-  "description": "Scaffolds out Polymer",
+  "version": "0.0.1",
+  "description": "Scaffold out a front-end Polymer web app",
   "keywords": [
     "yeoman-generator",
-    "css",
-    "html",
-    "template",
-    "framework",
-    "component"
+    "web",
+    "app",
+    "front-end",
+    "h5bp",
+    "modernizr"
   ],
-  "homepage": "https://github.com/sindresorhus/generator-polymer",
-  "bugs": "https://github.com/sindresorhus/generator-polymer/issues",
-  "author": {
-    "name": "Sindre Sorhus",
-    "email": "sindresorhus@gmail.com",
-    "url": "http://sindresorhus.com"
-  },
+  "homepage": "https://github.com/yeoman/generator-polymer",
+  "bugs": "https://github.com/yeoman/generator-polymer/issues",
+  "author": "Chrome Developer Relations",
   "main": "app/index.js",
   "repository": {
     "type": "git",
-    "url": "git://github.com/sindresorhus/generator-polymer.git"
+    "url": "git://github.com/yeoman/generator-polymer.git"
   },
   "scripts": {
-    "test": "mocha"
+    "test": "mocha --reporter spec"
   },
   "dependencies": {
-    "yeoman-generator": "~0.12.3"
+    "yeoman-generator": "~0.12.3",
+    "cheerio": "~0.12.1"
+  },
+  "peerDependencies": {
+    "generator-mocha": "~0.1.1",
+    "yo": ">=1.0.0-rc.1.1"
   },
   "devDependencies": {
     "mocha": "~1.12.0"
-  },
-  "peerDependencies": {
-    "yo": ">=1.0.0-rc.1.1"
   },
   "engines": {
     "node": ">=0.8.0",
@@ -40,10 +38,7 @@
   },
   "licenses": [
     {
-      "type": "MIT"
+      "type": "BSD"
     }
-  ],
-  "files": [
-    "app"
   ]
 }
